--- a/MLtricks.tex
+++ b/MLtricks.tex
@@ -250,7 +250,7 @@ Important note: vanilla Nystroem sampling is unsupervised and does not attempt t
 
 
 \begin{frame}{Addressing scalability issues}
-Alternative, Fourrier RBF kernel approximation
+Alternative, Fourier RBF kernel approximation
 \begin{columns}
 \column{0.5\textwidth}
 \includegraphics[scale=0.3]{arcs_rbfsampler.png} 
@@ -262,7 +262,7 @@ Alternative, Fourrier RBF kernel approximation
 \end{frame}
 
 \begin{frame}{Addressing scalability issues}
-Fourrier RBF kernel approximation, zooming out:
+Fourier RBF kernel approximation, zooming out:
 \begin{center}
 \includegraphics[scale=0.3]{arcs_rbfsampler_above.png} 
 \end{center}
